lab1/Test/L1-A-9-47.cmm
float ;
struct jnKUG {
  struct {
    int SIhMu ;
  }wol ;
};
int ScDjgWuNO , K 

;
int IPjagTLS6KPHxJ22JML ( {
  int , vBLr_ROdku1R [ 1892297035 ] ;
  struct ivaIHCZb1xa3LqLsOG bsTTy5p6BTHi1aL = roZfsnErFCJ 
    ;
  if ( tceNv9FFvXv )   if ( KiCUaF )   while ( Ux2AJaYU_dXl0CoI 
    )   return ;

else {
  }
else   if ( Rmt )   yV5 || XySU == XXjkW61_vhzZD3MSX 
    - tN2Ed0k_PoOB / ! - N ( J8QZZgZXQ , cjTDEos3Vizrt 
    = KFgJgO52IC2HF && ll8vzS1xda > - waxASyvWr4tmWRF 
    [ vhhRPp5HUk0TQH || UW8f6ix && tSUXvC21vlK <= _MNeaczd 
    [ GaeS < ! ( EKZo7giWGZVN || Z5rVPNwo27pie5 * vLm 
    [ qj || LfgkyWTbaXrUwxMVEf >= - 37892435.2471786 ] 
    ) . tk . Ep0JteyG2sadQwKhof != KfFsxN3Nnf0kIg ] ] 
    . V_HAjqo56Q + - - * iwgzu4nl ( ) ) ;


}
int ;
int R49MnM7_idOy6OE int JHvXOLEoWcB , int AX2klmsp4ed4 
  ) {
}
int ;
